2003-10-24 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b188

	* Language: - Translated missing string.
		    - Synced Languages against this.
		    - Updated German (de_DE), Lithuanian (lt_LT).

	* Change: - Added some Linebreaks for better reading.
		  - Remove yellow colored background for locale warningtext.
	

2003-10-23 John Kirkland <jpk@bl.org> 1.4.1-cvs-b187

	* Fixed [ 829241 ] Move nested album to a nested album in itself

2003-10-23 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b186

	* Language: - Added ../layout/breadcrumb.inc to core-filelist.
		    - Synced all po files against this change.
		    - Update German (de_DE).

	* Bugfix: Flags for languages works now everywhere.

2003-10-22 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b185

	* Language: Update Slovenian (sl_SI)

2003-10-21 Jesse Mullan <jmullan@visi.com> 1.4.1-cvs-b184
	
	* view_photo.php updated to generate meta keywords tag from 
	  the photo's keywords

2003-10-21 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b183

	* Bugfix: Added missing global $GALLERY_BASEDIR, 
		  which causes flags not to showed.
	 (Found by H0bbel)

2003-10-21 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b182
	
	* Language: Fixed Czech Encodings (both)
		    This fixes Bug #821509

2003-10-21 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b181

	* Language: Some tweaks when no or empty locale folder is there

	* Language: - Changed a wording a little.
		    - Update german (de_DE). 
		    - New Report

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b180

	* Gallery will now work with locale directory removed.

	* manifesst.inc moved to setup/

	* build_manifest.php moved to tools/

	* check_versions.php added.  It's not linked to anything, but we 
	  can get users to run it to see if their  gallery is up-to-date.

	* added "emphasis" to config.css

2003-10-20 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b179

	* Changed " to ' in manifest.inc to make Jens happy.
