@@ -1,3 +1,9 @@
+2003-10-24  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b189
+
+	* Fixed a bug in the Album class where we were resetting the 
+	  last modification date when we shouldn't have been on all
+	  below-the-bar changes (eg click count manipulation).
+
 2003-10-24 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b188
 
 	* Language: - Translated missing string.
